update with report: kzg_umr_cell_numbers

--- a/_posts/2012-01-05-kzg_umr_cell_numbers.textile
+++ b/_posts/2012-01-05-kzg_umr_cell_numbers.textile
@@ -165,3 +165,4 @@ With a closer look at UMR_10ng and UMR_100ng vs UMR_1ug:
 
 !(medium)data/kzg_umr_cell_numbers/samples_log_expression_values_scatter_umr_10ng_umr_1ug.png!
 
+!(medium)data/kzg_umr_cell_numbers/samples_log_expression_values_scatter_umr_100ng_umr_1ug.png!
