--- a/README.textile
+++ b/README.textile
@@ -46,4 +46,52 @@ Now when you use @hastie publish@ it should publish to your @bioreports_source@ 
 
 Enjoy!
 
+Also, see "Hastie Readme":https://github.com/vlandham/hastie for more information on the motivation of this project, as well as how to run Hastie.
 
+h2. BioReports Features
+
+There are a number of tools built into BioReports that are useful to our setup. Your mileage may vary.
+
+h3. _plugins/
+
+* liquid_table_block.rb
+** quickly convert tsv or csv content to an html table.
+* liquid_all_links.rb
+** Provide paths to files on shared drives - no matter the OS.
+* liquid_data_link.rb
+** Generate a separate table page for large files. Place button to find this file in the report.
+* generic_index.rb
+** ripped off another site. Used to generate report lists for labs (categories).
+
+h3. js/
+
+* d3
+** For future plans to automate visualizations
+* bootstrap
+** version of twitter bootstrap - just in cases
+* jquery 1.6.2
+** Everyone needs jquery - right?
+* tablesorter
+** Make every table a fancy table
+* picnet table
+** For large tables
+* jquery tableofcontents
+** automate creation of TOC
+* script.js
+** Add show / hide and other features automatically to report sections
+
+h3. css/
+
+* reset.css
+** based on html5boilerplate style.css
+* style.css
+** custom stylings for custom tables, images, etc.
+
+h3. layouts/
+
+* report.html
+** Nice looking start for your reports
+
+h3. posts/
+
+* some example posts to get you started
