--- a/_posts/2011-11-11-bioreports_doc.textile
+++ b/_posts/2011-11-11-bioreports_doc.textile
@@ -231,7 +231,7 @@ You can also use raw html, just using the appropriate classes:
 
 Makes:
 
-<table class="basic_table display">
+<table class="simple">
 <thead>
 <tr><td>Path</td><td>Sample</td></tr>
 </thead>
